# Proyecto-1-EDD

Biblioteca_Magica/: CMakeLists.txt  README.md  main.cpp
Biblioteca_Magica/AVL/: AVL_Auxiliar.cpp  AVL_Auxiliar.h  AVL_Calculo.cpp  AVL_Insertar.cpp  ArbolAVL.cpp  ArbolAVL.h  BuscarAVL.cpp  EliminacionAVL.cpp  EliminacionAVL.h  ListaEncontrados.h  NodoAVL.h  NodoAVL_Auxiliar.h
Biblioteca_Magica/AVL_Auxiliar/: ArbolAVL_Auxiliar.cpp  IndiceISBN.h  NodoIndiceISBN.h
Biblioteca_Magica/ArbolB/: ArbolB.h  ArbolB_Buscar.cpp  ArbolB_Eliminar.cpp  ArbolB_Insertar.cpp  ListaLibros.cpp  ListaLibros.h  NodoB.h
Biblioteca_Magica/ArbolB+/: ArbolBPlus.cpp  ArbolBPlus.h  B+_Buscar.cpp  B+_Eliminar.cpp  B+_Insertar.cpp  NodoBPlus.h  NodoHoja.cpp  NodoHoja.h  NodoInterno.cpp  NodoInterno.h
Biblioteca_Magica/GUI/: MainWindow.cpp  MainWindow.h
Biblioteca_Magica/GUI/Vistas/AVL/: AVLViewer.cpp  AVLViewer.h
Biblioteca_Magica/GUI/Vistas/B/: BViewer.cpp  BViewer.h
Biblioteca_Magica/GUI/Vistas/B+/: BPlusViewer.cpp  BPlusViewer.h
Biblioteca_Magica/GUI/Vistas/Busqueda/: BusquedaUnificada.cpp  BusquedaUnificada.h
Biblioteca_Magica/GUI/Vistas/OrdenAlfabetico/: ListadoAlfabetico.cpp  ListadoAlfabetico.h
Biblioteca_Magica/GUI/Vistas/Rendimiento/: PruebaRendimiento.cpp  PruebaRendimiento.h
Biblioteca_Magica/Modelos/: Catalogo.cpp  Catalogo.h  Libro.cpp  Libro.h
Biblioteca_Magica/csv/: LectorCSV.cpp  LectorCSV.h
Biblioteca_Magica/include/: ExportadorDOT.h  ExportadorDotB+.h  ExportadorDotB.h  ExportadorDotBPlus.h  ListaRepetidos.cpp  ListaRepetidos.h  Nodo.h  Recorridos.h
